# anesthesiology-mentor

./: .claudeignore  .env  .gitignore  CLAUDE.md  GRAPHIFY_SETUP_HANDOFF.md  LOVABLE_PROMPTS.md  index.html  package-lock.json  package.json  tailwind.config.ts
.lovable/: plan.md
.planning/: NEXT-SESSION-PROMPT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  plan-review-2026-04-21.md
.planning/phase-0/: audit.json  baseline.md  findings-preliminary.md  findings.md  smoke-test.md  supabase-security.md
.planning/phase-1/: NEXT-WINDOW-PROMPT.md  PLAN.md  RESEARCH.md  VERIFICATION.md
docs/audits/: 2026-04-25-app-audit.md  2026-04-25-fix-plan.md  2026-04-25-phase0-coverage.md  2026-04-25-srs-deep-dive.md  (+1 more)
e2e/: playwright.config.ts
reports/: master_report_2026-04-11.html  master_report_2026-04-11_v2.html  report_2026-03-29.html  report_2026-05-03.html  report_2026-05-10.html  report_2026-05-17.html  report_2026-05-24.html  report_2026-05-28.html  study_plan_2026-04-11.md  tracking.json
scripts/master-report/: .env.example  eri_calibration.py  fsrs_module.py  generate_report.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/master-report/_legacy_v2/: README.md  gen_html_v2.py  master_report_v2.py  master_stats_v2.json
scripts/master-report/tests/: conftest.py  test_compute_monte_carlo.py  test_compute_ols_trend.py  test_compute_readiness.py  test_eri_calibration.py  test_fail_fast.py  test_fsrs_integration.py  test_fsrs_module.py
src/: App.tsx  index.css  main.tsx
src/lib/: animations.ts  (+24 more)
supabase/: config.toml
tmp/: code-11.html  code-12.html
(+326 files in other folders)
