[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "master-report"
version = "0.1.0"
description = "YouShellNotPass master statistical report generator"
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: isolated unit tests (no I/O)",
    "slow: tests that take > 1s (e.g., full Monte Carlo runs)",
    "integration: tests that require real Supabase or filesystem",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "_legacy_v2/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
